# llm-devtest-template

./: .env.dev.example  .env.prod.example  .env.test.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.en.md  README.ko.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-test.yml
src/: __init__.py  config.py  main.py  ollama_client.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_ollama_client.py
